# RT3DUS-Needle-Tracking-PA-Beacon-Data

./: .gitattributes  README.md  pyproject.toml
src/figure_5/: figure_5.py  water_accuracy_1.csv  water_accuracy_2.csv
src/figure_6/: figure_6.py  xct_summary_results.csv
src/figure_8/: figure_8a.py  figure_8b.py  usability_procedures.xlsx  usability_survey.xlsx
src/helpers/: __init__.py  format_figure.py  iopjournal.cls
